--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.2.1",
     "axios": "^1.2.2",
     "esri-leaflet-geocoder": "^3.1.3",
     "i18next": "^22.4.9",
