--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+
 /coverage
 
-# production
+.env
 /build
 
 # misc
@@ -21,3 +21,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.gitignore
